<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ori">*</string>
    <string name="impartire">/</string>
    <string name="delete">C</string>
    <string name="egal">=</string>
    <string name="punct">.</string>
    <string name="zero">0</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tg</string>
    <string name="cotan">ctg</string>
    <string name="pdreapta">)</string>
    <string name="pstanga">(</string>
    <string name="sqrt">sqrt</string>
    <string name="log">log</string>
    <string name="pow">^</string>

</resources>